--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -266,6 +266,10 @@ body {
   scrollbar-width: none;
 }
 
+.navbar {
+  @apply pad bg-light dark:bg-darker flex flex-row justify-between items-center drop-shadow-sm select-none sticky top-0 z-10;
+}
+
 .statDiv {
   @apply bg-light dark:bg-middark w-[200px] h-[120px] px-4 py-2 rounded-[10px] flex flex-col relative;
 }
@@ -325,4 +329,114 @@ body {
           backdrop-filter: blur(10px);
   box-shadow: 0px 0px 5px rgba(255, 215, 0, 0.5);
   @apply p-2 flex-row rounded-lg gap-4;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-links {
+  flex: 1;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-links li {
+  margin: 0 1rem;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.nav-links li:hover a {
+  color: var(--color-grey) !important;
+}
+
+.menuu {
+  cursor: pointer;
+}
+
+.menuu:hover {
+  color: var(--color-golden) !important;
+}
+
+.nav-ss {
+  display: none;
+}
+
+.nav-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-black);
+  transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+  -moz-transition: 0.5s ease;
+  -ms-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+}
+
+.nav-overlay .overlay-close {
+  font-size: 27px;
+  color: var(--color-golden);
+  cursor: pointer;
+  position: absolute;
+  top: 30px;
+  right: 20px;
+}
+
+.nav-links-ss {
+  list-style: none;
+}
+
+.nav-links-ss li {
+  margin: 2rem;
+  cursor: pointer;
+  text-transform: capitalize;
+  font-size: 2rem;
+  text-align: center;
+}
+
+@media screen and (max-width: 1150px) {
+  .nav-links {
+    display: none;
+  }
+  .nav-ss {
+    display: flex;
+  }
+}
+@media screen and (max-width: 650px) {
+  nav {
+    padding: 1rem;
+  }
+  .login {
+    display: none;
+  }
+}
+main {
+  @apply pad;
+}
+
+.gradient-w {
+  @apply bg-gradient-to-tl from-slate-300 to-white text-black;
+}
+
+.imgbg {
+  background-image: url("./../bg-3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }/*# sourceMappingURL=globals.css.map */
