--- a/public/css/globals.scss
+++ b/public/css/globals.scss
@@ -14,6 +14,7 @@ $danger: #dc3545;
 $prime: #0d6efd;
 $money: #28b530;
 $accent: #6ee154;
+$newda: #c6871b;
 
 ::-webkit-scrollbar {
   display: none;
@@ -180,7 +181,7 @@ main {
 }
 
 .imgbg {
-  background-image: url('./../bg-3.jpg');
+  background-image: url('./../bgg.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
