--- a/public/css/globals.scss
+++ b/public/css/globals.scss
@@ -181,7 +181,7 @@ main {
 }
 
 .imgbg {
-  background-image: url('./../bgg.png');
+  background-image: url('./../newbg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
