--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -435,7 +435,7 @@ main {
 }
 
 .imgbg {
-  background-image: url("./../bgg.png");
+  background-image: url("./../newbg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
